--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -894,7 +894,7 @@
 					<div class="juego-galeria-contenedor" style="margin-top: 50px;">
 						@if (mediaMostrarPosicion == 99999)
 						{
-							<BlazoredVideo style="width: 100vw; height: calc(100vh - 190px); cursor: pointer; max-width: 1320px; max-height: 742.50px;" controls="controls" preload="metadata">
+							<BlazoredVideo style="width: 100vw; height: calc(100vh - 190px); cursor: pointer; max-width: 1320px; max-height: 742.50px;" controls="controls" preload="auto">
 								<source src="@mediaMostrar" type="video/mp4" />
 								<source src="@mediaMostrar.Replace(".mp4", ".webm")" type="video/webm" />
 							</BlazoredVideo>
