--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -163,8 +163,8 @@
     </script> *@
 
 
-    <script src="_framework/blazor.server.js" autostart="false"></script>
-    <script>
+    <script src="_framework/blazor.server.js"></script>
+  @*   <script>
         async function boot() {
             await Blazor.start()
 
@@ -179,7 +179,7 @@
         }
 
         boot()
-    </script>
+    </script> *@
 
     <script>
         function hoverTooltip(e, id) {
