--- a/pepeizqs deals web/Pages/admin.cshtml
+++ b/pepeizqs deals web/Pages/admin.cshtml
@@ -34,6 +34,6 @@
 
     if (adminLogeado == true)
     {
-        @(await Html.RenderComponentAsync<pepeizqs_deals_web.Pages.Componentes.Admin.Maestro>(RenderMode.ServerPrerendered))
+        @(await Html.RenderComponentAsync<pepeizqs_deals_web.Pages.Componentes.Admin.Maestro>(RenderMode.Server))
     }
 }
