--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -35,38 +35,8 @@
 			}
 		}
 	}
-
-	string enlace = "https://pepeizqdeals.com/game/" + Model.juego.Id.ToString() + "/" + Herramientas.EnlaceAdaptador.Nombre(Model.juego.Nombre) + "/";
-
-	string descripcion = string.Empty;
-
-	if (Model.juego.Caracteristicas != null)
-	{
-		if (string.IsNullOrEmpty(Model.juego.Caracteristicas.Descripcion) == false)
-		{
-			descripcion = Model.juego.Caracteristicas.Descripcion;
-		}
-	}
-
-	string imagen = string.Empty;
-
-	if (Model.juego.Imagenes != null)
-	{
-		if (string.IsNullOrEmpty(Model.juego.Imagenes.Header_460x215) == false)
-		{
-			imagen = Model.juego.Imagenes.Header_460x215;
-		}
-	}
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new { 
-	idioma = Model.idioma, 
-	titulo = Model.juego.Nombre, 
-	enlace = enlace, 
-	canonical = enlace, 
-	descripcion = descripcion, 
-	imagen = imagen 
-}))
 
 @if (usuarioLogeado == true)
 {
@@ -98,6 +68,38 @@
 
 	if (prerenderizado == true)
 	{
+		string enlace = "https://pepeizqdeals.com/game/" + Model.juego.Id.ToString() + "/" + Herramientas.EnlaceAdaptador.Nombre(Model.juego.Nombre) + "/";
+
+		string descripcion = string.Empty;
+
+		if (Model.juego.Caracteristicas != null)
+		{
+			if (string.IsNullOrEmpty(Model.juego.Caracteristicas.Descripcion) == false)
+			{
+				descripcion = Model.juego.Caracteristicas.Descripcion;
+			}
+		}
+
+		string imagen = string.Empty;
+
+		if (Model.juego.Imagenes != null)
+		{
+			if (string.IsNullOrEmpty(Model.juego.Imagenes.Header_460x215) == false)
+			{
+				imagen = Model.juego.Imagenes.Header_460x215;
+			}
+		}
+
+		@(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new
+		{
+			idioma = Model.idioma,
+			titulo = Model.juego.Nombre,
+			enlace = enlace,
+			canonical = enlace,
+			descripcion = descripcion,
+			imagen = imagen
+		}))
+
 		@(await Html.RenderComponentAsync<Componentes.Secciones.Juego>(RenderMode.ServerPrerendered, new
 		{
 			idioma = Model.idioma,
