--- a/pepeizqs deals web/Pages/Componentes/Admin/DLCs.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/DLCs.razor
@@ -33,7 +33,7 @@
             conexion = Herramientas.BaseDatos.Conectar();
         }
 
-        dlcsPendientes = BaseDatos.Juegos.Buscar.DLCs(null, conexion, false);
+        dlcsPendientes = BaseDatos.Juegos.Buscar.DLCs(null, conexion);
     }
 
     private int posicionDLC = 0;
