--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
@@ -320,7 +320,7 @@
 		z-index: 1001;
 		margin-top: var(--alturaCabecera);
 		padding: 10px;
-		backdrop-filter: blur(30px);
+		background-color: var(--fondoOscuro);
 	}
 </style>
 
