--- a/pepeizqs deals web/Pages/Componentes/Tareas/Tiendas.razor
+++ b/pepeizqs deals web/Pages/Componentes/Tareas/Tiendas.razor
@@ -49,7 +49,7 @@
                         }
                         catch (Exception ex)
                         {
-                            BaseDatos.Errores.Insertar.Ejecutar(tiendaComprobar.Id, ex, conexion);
+                            BaseDatos.Errores.Insertar.Mensaje(tiendaComprobar.Id, ex, conexion);
                         }            
                     }
                 }
