--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -192,37 +192,6 @@
 	}
 </style>
 
-@if (aviso != null)
-{
-	if (string.IsNullOrEmpty(aviso.Mensaje.Trim()) == false)
-	{
-		<div class="perfil" style="padding: 20px; border: 1px solid var(--fondoBoton); font-size: 17px; display: flex; align-items: center; margin-bottom: 40px; flex-direction: initial;">
-			<label style="padding-right: 20px;">@aviso.Fecha.Day.ToString()/@aviso.Fecha.Month.ToString()</label>
-			
-			@{
-				bool hayEnlace = false;
-
-				if (string.IsNullOrEmpty(aviso.Enlace.Trim()) == false)
-				{
-					if (aviso.Enlace.Contains("https://") == true)
-					{
-						hayEnlace = true;
-					}
-				}
-
-				if (hayEnlace == true)
-				{
-					<a href="@aviso.Enlace" target="_blank" style="text-decoration: none;">@aviso.Mensaje</a>
-				}
-				else
-				{
-					<label>@aviso.Mensaje</label>
-				}
-			}	
-		</div>
-	}
-}
-
 @if (juegosDestacadosMostrar.Count > 0)
 {
 	<div style="margin-bottom: 60px; position: relative;">
@@ -749,164 +718,142 @@ else
 	private Usuario usuario = new Usuario();
 	private List<string> usuarioJuegosSteam = new List<string>();
 
-	private BaseDatos.Avisos.Aviso aviso = null;
-
 	private List<BaseDatos.Recompensas.RecompensaJuego> recompensas = new List<BaseDatos.Recompensas.RecompensaJuego>();
 
-	#nullable enable
-	[CascadingParameter]
-	public HttpContext? HttpContext { get; set; }
-	#nullable disable
+	// #nullable enable
+	// [CascadingParameter]
+	// public HttpContext? HttpContext { get; set; }
+	// #nullable disable
 
 	protected override async Task OnInitializedAsync()
 	{
-		if (HttpContext == null)
+		usuario = await Herramientas.UsuarioDatos.Actualizar(HttpContextAccessor.HttpContext.User, usuario, UserManager, idioma);
+
+		if (usuario != null)
 		{
-			usuario = await Herramientas.UsuarioDatos.Actualizar(HttpContextAccessor.HttpContext.User, usuario, UserManager, idioma);
-
-			if (usuario != null)
+			if (string.IsNullOrEmpty(usuario.SteamGames) == false)
 			{
-				if (string.IsNullOrEmpty(usuario.SteamGames) == false)
-				{
-					usuarioJuegosSteam = Herramientas.Listados.Generar(usuario.SteamGames);
-				}
-
-				#region Filtrado
-
-				if (usuario.IndexOption1 == true)
-				{
-					estadoOcultarJuegosUsuario = "checked";
-				}
-				else
-				{
-					estadoOcultarJuegosUsuario = null;
-				}
-
-				if (string.IsNullOrEmpty(usuario.IndexDRMs) == false)
-				{
-					drms = JsonConvert.DeserializeObject<List<MostrarJuegoDRM>>(usuario.IndexDRMs);
-				}
-
-				if (string.IsNullOrEmpty(usuario.IndexCategories) == false)
-				{
-					categorias = JsonConvert.DeserializeObject<List<MostrarJuegoCategoria>>(usuario.IndexCategories);
-				}
-
-				#endregion
+				usuarioJuegosSteam = Herramientas.Listados.Generar(usuario.SteamGames);
 			}
 
-			//------------------------------------------------
+			#region Filtrado
 
-			conexion = Herramientas.BaseDatos.Conectar();
-
-			using (conexion)
+			if (usuario.IndexOption1 == true)
 			{
-				#region Destacados
+				estadoOcultarJuegosUsuario = "checked";
+			}
+			else
+			{
+				estadoOcultarJuegosUsuario = null;
+			}
 
-				juegosDestacadosMostrar = BaseDatos.Portada.Buscar.Destacados(usuarioJuegosSteam, conexion);
+			if (string.IsNullOrEmpty(usuario.IndexDRMs) == false)
+			{
+				drms = JsonConvert.DeserializeObject<List<MostrarJuegoDRM>>(usuario.IndexDRMs);
+			}
 
-				if (juegosDestacadosMostrar.Count > 0)
+			if (string.IsNullOrEmpty(usuario.IndexCategories) == false)
+			{
+				categorias = JsonConvert.DeserializeObject<List<MostrarJuegoCategoria>>(usuario.IndexCategories);
+			}
+
+			#endregion
+		}
+
+		//------------------------------------------------
+
+		conexion = Herramientas.BaseDatos.Conectar();
+
+		using (conexion)
+		{
+			#region Destacados
+
+			juegosDestacadosMostrar = BaseDatos.Portada.Buscar.Destacados(usuarioJuegosSteam, conexion);
+
+			if (juegosDestacadosMostrar.Count > 0)
+			{
+				juegoSeleccionado = juegosDestacadosMostrar[0];
+			}
+
+			CronometroDestacados();
+
+			#endregion
+
+			#region Minimos
+
+			Filtros();
+
+			#endregion
+
+			#region Noticias
+
+			try
+			{
+				noticiasGestor = BaseDatos.Noticias.Buscar.Actuales(conexion);
+			}
+			catch (Exception ex)
+			{
+				BaseDatos.Errores.Insertar.Mensaje("Portada Noticias", ex);
+			}
+
+			if (noticiasGestor != null)
+			{
+				if (noticiasGestor.Count > 0)
 				{
-					juegoSeleccionado = juegosDestacadosMostrar[0];
-				}
+					noticiasGestor = noticiasGestor.OrderBy(x => x.FechaEmpieza).Reverse().ToList();
 
-				cargadoDestacados = true;
-
-				CronometroDestacados();
-
-				try
-				{
-					
-				}
-				catch (Exception ex)
-				{
-					BaseDatos.Errores.Insertar.Ejecutar("Portada", ex, conexion);
-				}
-
-				#endregion
-
-				#region Aviso
-
-				aviso = BaseDatos.Avisos.Buscar.Ejecutar(idioma, conexion);
-
-				#endregion
-
-				#region Minimos
-
-				Filtros();
-
-				#endregion
-
-				#region Noticias
-
-				try
-				{
-					noticiasGestor = BaseDatos.Noticias.Buscar.Actuales(conexion);
-				}
-				catch (Exception ex)
-				{
-					BaseDatos.Errores.Insertar.Ejecutar("Portada Noticias", ex);
-				}
-
-				if (noticiasGestor != null)
-				{
-					if (noticiasGestor.Count > 0)
+					foreach (Noticias.Noticia noticia in noticiasGestor)
 					{
-						noticiasGestor = noticiasGestor.OrderBy(x => x.FechaEmpieza).Reverse().ToList();
+						DateTime fechaTemporal = noticia.FechaEmpieza;
+						fechaTemporal = fechaTemporal.AddDays(3);
 
-						foreach (Noticias.Noticia noticia in noticiasGestor)
+						if (fechaTemporal > DateTime.Now)
 						{
-							DateTime fechaTemporal = noticia.FechaEmpieza;
-							fechaTemporal = fechaTemporal.AddDays(3);
+							bool añadir = true;
 
-							if (fechaTemporal > DateTime.Now)
+							if (DateTime.Now > noticia.FechaTermina)
 							{
-								bool añadir = true;
+								añadir = false;
+							}
 
-								if (DateTime.Now > noticia.FechaTermina)
+							if (noticiasMostrar.Count > 0)
+							{
+								foreach (var noticiaMostrar in noticiasMostrar)
 								{
-									añadir = false;
-								}
-
-								if (noticiasMostrar.Count > 0)
-								{
-									foreach (var noticiaMostrar in noticiasMostrar)
+									if (noticiaMostrar.Id == noticia.Id)
 									{
-										if (noticiaMostrar.Id == noticia.Id)
-										{
-											añadir = false;
-										}
+										añadir = false;
 									}
 								}
+							}
 
-								if (añadir == true)
-								{
-									noticiasMostrar.Add(noticia);
-								}
+							if (añadir == true)
+							{
+								noticiasMostrar.Add(noticia);
 							}
 						}
 					}
 				}
-
-				#endregion
-
-				#region Recompensas
-
-				if (usuario == null)
-				{
-					recompensas = BaseDatos.Recompensas.Juegos.Todo();
-
-					if (recompensas != null)
-					{
-						if (recompensas.Count > 0)
-						{
-							recompensas = recompensas.OrderByDescending(x => x.Coins).ToList();
-						}
-					}
-				}				
-
-				#endregion
 			}
+
+			#endregion
+
+			#region Recompensas
+
+			if (usuario == null)
+			{
+				recompensas = BaseDatos.Recompensas.Juegos.Todo();
+
+				if (recompensas != null)
+				{
+					if (recompensas.Count > 0)
+					{
+						recompensas = recompensas.OrderByDescending(x => x.Coins).ToList();
+					}
+				}
+			}
+
+			#endregion
 		}
 	}
 
@@ -914,7 +861,6 @@ else
 
 	private List<Juegos.Juego> juegosDestacadosMostrar = new List<Juegos.Juego>();
 	private Juegos.Juego juegoSeleccionado = new Juegos.Juego();
-	private bool cargadoDestacados = false;
 	private PeriodicTimer cronometro = null;
 	private int cronometroContador = 0;
 	private int cronometroLimite = 30;
@@ -1017,7 +963,7 @@ else
 		}
 		catch (Exception ex)
 		{
-			BaseDatos.Errores.Insertar.Ejecutar("Portada Minimos", ex);
+			BaseDatos.Errores.Insertar.Mensaje("Portada Minimos", ex);
 		}
 	}
 
